--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,7 +40,7 @@ jobs:
       # docker --build-name=devops101-docker --build-number=${{ github.run_number }}
       - name: Docker push with JFrog CLI
         run: |
-          ./jfrog rt docker-push luistorrescisneros.jfrog.io/devops-101-docker-local/my-image:latest
+          ./jfrog rt docker-push luistorrescisneros.jfrog.io/devops-101-docker-local/my-image:latest luistorrescisneros.jfrog.io/devops-101-docker-local/
   
       - name: Collect the environment variables and create the build info 
         run: |
